--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@ngrx/store": "^11.0.1",
     "angular-l10n": "^11.0.0",
     "angular-material-rail-drawer": "0.0.6",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "ngx-cookie": "^5.0.2",
     "ngx-store": "^2.1.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
@@ -43,6 +45,7 @@
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
+    "@types/crypto-js": "^4.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
