Update product unit component

--- a/package.json
+++ b/package.json
@@ -28,10 +28,17 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@covalent/core": "git+https://github.com/Teradata/covalent-nightly.git",
+    "@covalent/dynamic-forms": "^3.1.0",
+    "@covalent/echarts": "git+https://github.com/Teradata/covalent-echarts-nightly.git",
+    "@covalent/highlight": "^3.1.0",
+    "@covalent/http": "^3.1.0",
+    "@covalent/markdown": "^3.1.0",
     "@ngrx/store": "^11.0.1",
     "angular-l10n": "^11.0.0",
     "angular-material-rail-drawer": "0.0.6",
     "crypto-js": "^4.0.0",
+    "echarts": "^5.0.2",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "ngx-cookie": "^5.0.2",
